--- a/.github/workflows/update-mirror.yml
+++ b/.github/workflows/update-mirror.yml
@@ -121,6 +121,7 @@ jobs:
               root_dir = "./mirror-site"
               for dirpath, _, filenames in os.walk(root_dir):
                   for filename in filenames:
+                      print(f"Processing {filename} in {dirpath}")
                       if filename.endswith(".html"):
                           filepath = os.path.join(dirpath, filename)
                           find_and_fix_page_id_links(filepath)
