--- a/.github/workflows/update-mirror.yml
+++ b/.github/workflows/update-mirror.yml
@@ -8,6 +8,7 @@ on:
 env:
   DOMAIN: sipe25.com
   BASE_URL: https://sipe25.com
+  NEW_BASE_URL: https://ai-sf.it/sipe
 
 jobs:
 
@@ -17,7 +18,7 @@ jobs:
       artifact-name: mirror-site
     steps:
     - name: Checkout the repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Install HTTrack
       run: sudo apt-get update && sudo apt-get install -y httrack
