Go back to a gh-pages based workflow instead of an artifact-based one

--- a/.github/workflows/update-mirror.yml
+++ b/.github/workflows/update-mirror.yml
@@ -93,16 +93,21 @@ jobs:
         name: fixed-mirror-site
         path: public
 
-    - name: Setup Pages
-      uses: actions/configure-pages@v5
+    #- name: Setup Pages
+    #  uses: actions/configure-pages@v5
 
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: public
+    #- name: Upload artifact
+    #  uses: actions/upload-pages-artifact@v3
+    #  with:
+    #    path: public
     
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
-
-
+    #- name: Deploy to GitHub Pages
+    #  id: deployment
+    #  uses: actions/deploy-pages@v4
+    - name: Publish in GitHub Pages
+      uses: peaceiris/actions-gh-pages@v4
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: public
+        publish_branch: gh-pages
+        publish_force: true
