Update image directory path in workflow

--- a/.github/workflows/update-mirror.yml
+++ b/.github/workflows/update-mirror.yml
@@ -96,7 +96,7 @@ jobs:
       id: resize-images
       uses: petems/image-resizer-gh-action@master
       with:
-        target: wp-content/ # directory to look for images in
+        target: public/wp-content/ # directory to look for images in
         dimensions: 1024 # parameter to change size, passed to mogrify as ``
         widthLimit: 1024 # max width to check
         heightLimit: 768 # max height to check
